Fix last column align to right on data tables (#929)

--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
@@ -1245,10 +1245,6 @@ div[id$="notifications"].ui-tabs-panel {
 	}
 }
 
-.ui-datatable.ui-widget table thead th.ui-state-default:last-child {
-	text-align: right;
-}
-
 tr.ui-state-highlight, .ui-widget-content tr.ui-state-highlight, .ui-widget-header tr.ui-state-highlight {
 	&, &.ui-datatable-odd {
 		td {
